--- a/features.html
+++ b/features.html
@@ -6,13 +6,13 @@
     <title>Features | OzEHR</title>
     <meta
       name="description"
-      content="Explore OzEHR features for college health: student-first scheduling, charting, secure messaging, portals, and AI-assisted immunization extraction and verification."
+      content="Explore OzEHR features for college health: student-first scheduling, charting, prescribing, secure messaging, portals, and AI-assisted immunization workflows."
     />
 
     <meta property="og:title" content="Features | OzEHR" />
     <meta
       property="og:description"
-      content="Student-first workflows, clinician-ready tools, and AI-assisted immunization processes built for college health." />
+      content="Student-first workflows, clinician-ready tools, prescribing, and AI-assisted immunization processes built for college health." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ozehr.com/features.html" />
     <meta property="og:image" content="assets/svg/og.svg" />
@@ -196,6 +196,20 @@
               </div>
               <div class="tile-title">Secure Messaging</div>
               <div class="tile-sub">Teams, students, and follow-ups</div>
+            </div>
+
+            <div class="tile">
+              <div class="tile-icon" aria-hidden="true">
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4 7H20V19H4V7Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+                  <path d="M8 4H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M12 4V7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M8 12H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M8 16H13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </div>
+              <div class="tile-title">Prescribing</div>
+              <div class="tile-sub">E-prescribing, medications, and refill workflows</div>
             </div>
 
             <div class="tile">
