--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <div class="header reveal">
             <div>
               <h2 class="h2">Pricing that makes sense for campuses.</h2>
-              <p>Choose a starting package and scale up as your clinic grows. Exact pricing depends on clinicians, locations, and integrations.</p>
+              <p>One all-inclusive model built for college health. AI features are included in the core platform.</p>
             </div>
             <div class="btn-row" style="margin-top:0">
               <a class="btn secondary" href="pricing.html">View full pricing</a>
@@ -500,93 +500,33 @@
           </div>
 
           <div class="grid pricing">
-            <div class="price-card reveal">
+            <div class="price-card featured reveal" style="grid-column:1 / -1">
               <div class="price-top">
                 <div>
-                  <div class="h3" style="margin:0">Campus Starter</div>
-                  <div class="muted" style="font-size:13px">Single location clinics</div>
+                  <div class="h3" style="margin:0">OzEHR Platform</div>
+                  <div class="muted" style="font-size:13px">Single pricing model for campus health centers</div>
                 </div>
-                <span class="pill">Best for pilots</span>
+                <span class="pill">AI included</span>
               </div>
               <div class="price">Custom <small>quote</small></div>
               <ul class="bullets">
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Scheduling + walk-ins
+                  Scheduling, charting, intake, messaging, and student portal
                 </li>
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Intake + forms builder
+                  AI-assisted documentation and automation features included
                 </li>
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Student portal
+                  Implementation planning, migration support, and training included
                 </li>
               </ul>
               <div class="btn-row">
-                <a class="btn secondary" href="contact.html">Get a quote</a>
+                <a class="btn primary" href="contact.html">Request a quote</a>
               </div>
             </div>
-
-            <div class="price-card featured reveal">
-              <div class="price-top">
-                <div>
-                  <div class="h3" style="margin:0">Campus Plus</div>
-                  <div class="muted" style="font-size:13px">Most college health centers</div>
-                </div>
-                <span class="pill">Most popular</span>
-              </div>
-              <div class="price">Custom <small>quote</small></div>
-              <ul class="bullets">
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Clinical notes + templates
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Messaging + text reminders
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Lab + imaging integrations
-                </li>
-              </ul>
-              <div class="btn-row">
-                <a class="btn primary" href="contact.html">Request a demo</a>
-              </div>
-            </div>
-
-            <div class="price-card reveal">
-              <div class="price-top">
-                <div>
-                  <div class="h3" style="margin:0">Enterprise</div>
-                  <div class="muted" style="font-size:13px">Multi-campus + complex IT</div>
-                </div>
-                <span class="pill">For scale</span>
-              </div>
-              <div class="price">Custom <small>quote</small></div>
-              <ul class="bullets">
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  SSO + advanced permissions
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Custom integrations + data export
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Dedicated implementation support
-                </li>
-              </ul>
-              <div class="btn-row">
-                <a class="btn secondary" href="contact.html">Talk to sales</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="notice" style="margin-top:14px">
-            Note: pricing shown as "custom quote" by default. Add real numbers once your packaging is finalized.
           </div>
         </div>
       </section>
