--- a/pricing.html
+++ b/pricing.html
@@ -6,13 +6,13 @@
     <title>Pricing | OzEHR</title>
     <meta
       name="description"
-      content="OzEHR pricing for college health centers. Transparent packages that scale with clinicians, locations, and integrations. Request a tailored quote."
+      content="OzEHR pricing for college health centers. One all-inclusive model with AI features included."
     />
 
     <meta property="og:title" content="Pricing | OzEHR" />
     <meta
       property="og:description"
-      content="Campus-friendly pricing packages and implementation support." />
+      content="One all-inclusive campus pricing model with implementation support." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ozehr.com/pricing.html" />
     <meta property="og:image" content="assets/svg/og.svg" />
@@ -84,10 +84,9 @@
           <div class="grid hero-grid">
             <div class="reveal">
               <span class="kicker"><span class="dot" aria-hidden="true"></span> Pricing</span>
-              <h1 class="h1">Campus-friendly pricing that scales.</h1>
+              <h1 class="h1">One all-inclusive pricing model.</h1>
               <p class="lead">
-                OzEHR pricing is packaged to match how college health centers operate: clinics, clinicians, locations, and integrations.
-                Start simple, then add modules as needed.
+                OzEHR uses one campus pricing model. AI features are included in the platform, along with implementation support.
               </p>
               <div class="btn-row">
                 <a class="btn primary" href="contact.html">Request a quote</a>
@@ -128,93 +127,37 @@
         <div class="container">
           <div class="header reveal">
             <div>
-              <h2 class="h2">Packages</h2>
-              <p>Use these as a starting point. We'll confirm scope based on your center's workflows and systems.</p>
+              <h2 class="h2">Single model pricing</h2>
+              <p>One subscription model for campus health centers, scoped to your size and implementation needs.</p>
             </div>
           </div>
 
           <div class="grid pricing">
-            <div class="price-card reveal">
+            <div class="price-card featured reveal" style="grid-column:1 / -1">
               <div class="price-top">
                 <div>
-                  <div class="h3" style="margin:0">Campus Starter</div>
-                  <div class="muted" style="font-size:13px">Single location clinics</div>
+                  <div class="h3" style="margin:0">OzEHR Platform</div>
+                  <div class="muted" style="font-size:13px">Single all-inclusive model for college health centers</div>
                 </div>
-                <span class="pill">Best for pilots</span>
+                <span class="pill">AI included</span>
               </div>
               <div class="price">Custom <small>quote</small></div>
               <ul class="bullets">
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Scheduling + walk-ins
+                  Scheduling, intake, charting, portal, messaging, and billing workflows
                 </li>
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Intake + forms builder
+                  AI-assisted features included across supported workflows
                 </li>
                 <li>
                   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Student portal
+                  Implementation planning, migration support, and staff training included
                 </li>
               </ul>
               <div class="btn-row">
-                <a class="btn secondary" href="contact.html">Get a quote</a>
-              </div>
-            </div>
-
-            <div class="price-card featured reveal">
-              <div class="price-top">
-                <div>
-                  <div class="h3" style="margin:0">Campus Plus</div>
-                  <div class="muted" style="font-size:13px">Most college health centers</div>
-                </div>
-                <span class="pill">Most popular</span>
-              </div>
-              <div class="price">Custom <small>quote</small></div>
-              <ul class="bullets">
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Clinical notes + templates
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Messaging + text reminders
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Lab + imaging integrations
-                </li>
-              </ul>
-              <div class="btn-row">
-                <a class="btn primary" href="contact.html">Request a demo</a>
-              </div>
-            </div>
-
-            <div class="price-card reveal">
-              <div class="price-top">
-                <div>
-                  <div class="h3" style="margin:0">Enterprise</div>
-                  <div class="muted" style="font-size:13px">Multi-campus + complex IT</div>
-                </div>
-                <span class="pill">For scale</span>
-              </div>
-              <div class="price">Custom <small>quote</small></div>
-              <ul class="bullets">
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  SSO + advanced permissions
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Custom integrations + data export
-                </li>
-                <li>
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Dedicated implementation support
-                </li>
-              </ul>
-              <div class="btn-row">
-                <a class="btn secondary" href="contact.html">Talk to sales</a>
+                <a class="btn primary" href="contact.html">Request a quote</a>
               </div>
             </div>
           </div>
@@ -223,7 +166,7 @@
             <div class="panel reveal">
               <span class="pill">What's included</span>
               <h2 class="h2" style="margin-top:10px">Implementation that doesn't stall.</h2>
-              <p class="muted">Every package includes a clear rollout plan and real training time for the people doing the work.</p>
+              <p class="muted">Every subscription includes a clear rollout plan and real training time for the people doing the work.</p>
               <div class="list">
                 <div class="item"><div class="check" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div><div><strong>Configuration</strong><p>Roles, visit types, templates, and portal settings.</p></div></div>
                 <div class="item"><div class="check" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div><div><strong>Data migration planning</strong><p>Export mapping, cleanup, and validation checkpoints.</p></div></div>
@@ -232,19 +175,15 @@
             </div>
 
             <div class="panel reveal">
-              <span class="pill">Common add-ons</span>
-              <h2 class="h2" style="margin-top:10px">Add what you need, skip what you don't.</h2>
-              <p class="muted">College health centers vary. These add-ons cover the differences without bloating the core platform.</p>
+              <span class="pill">Platform scope</span>
+              <h2 class="h2" style="margin-top:10px">Designed for full-campus workflows.</h2>
+              <p class="muted">The model covers core outpatient operations without splitting essential workflows into separate tiers.</p>
               <div class="list">
                 <div class="item"><div class="check" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div><div><strong>Advanced integrations</strong><p>Lab, imaging, pharmacy, and campus system integration workstreams.</p></div></div>
                 <div class="item"><div class="check" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div><div><strong>SSO and identity</strong><p>SAML, role mapping, and campus directory alignment.</p></div></div>
                 <div class="item"><div class="check" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div><div><strong>Dedicated support</strong><p>Enhanced SLAs and a named customer success contact.</p></div></div>
               </div>
             </div>
-          </div>
-
-          <div class="notice" style="margin-top:14px">
-            Placeholder pricing approach: once you finalize numbers, replace "Custom quote" with real pricing and add a short calculator (clinicians, locations, modules).
           </div>
         </div>
       </section>
@@ -260,8 +199,12 @@
 
           <div class="faq reveal">
             <details>
-              <summary>What drives pricing?</summary>
-              <p>Clinicians, locations, included modules, integration scope, and support level.</p>
+              <summary>How is pricing structured?</summary>
+              <p>OzEHR uses one all-inclusive pricing model. Final quote scope is based on campus size, implementation complexity, and integration requirements.</p>
+            </details>
+            <details>
+              <summary>Are AI features included?</summary>
+              <p>Yes. AI-assisted functionality is included in the platform model and not sold as a separate tier.</p>
             </details>
             <details>
               <summary>Do you offer annual or multi-year discounts?</summary>
@@ -281,7 +224,7 @@
             <div class="grid">
               <div>
                 <h2 class="h2" style="margin:0">Want a quote in one call?</h2>
-                <p class="muted" style="margin-top:10px">We'll ask a few scope questions and send a clear package recommendation.</p>
+                <p class="muted" style="margin-top:10px">We'll ask a few scope questions and send a clear quote for your campus.</p>
               </div>
               <div class="btn-row" style="justify-content:flex-end">
                 <a class="btn secondary" href="contact.html">Contact</a>
