--- a/product.html
+++ b/product.html
@@ -172,7 +172,7 @@
                           <div class="h3" style="margin:0">Messaging</div>
                           <div class="meta">Inbox, SMS, portal messages</div>
                         </div>
-                        <span class="chip">Plus</span>
+                        <span class="chip">Included</span>
                       </div>
                       <div class="bar" aria-hidden="true"><span style="--w: 44%"></span></div>
                     </div>
