--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
               <h2 class="h2" style="margin-top:10px">Contact form</h2>
               <p class="muted">This form sends directly to <a href="mailto:contact@ozehr.com">contact@ozehr.com</a>. We usually respond within one business day.</p>
 
-              <form class="form" id="contactForm">
+              <form class="form" id="contactForm" action="https://formsubmit.co/contact@ozehr.com" method="POST">
                 <div class="field">
                   <label for="name">Name</label>
                   <input id="name" name="name" autocomplete="name" required />
@@ -138,11 +138,6 @@
                 <div class="field">
                   <label for="email">Work email</label>
                   <input id="email" name="email" type="email" autocomplete="email" required />
-                </div>
-
-                <div class="field" aria-hidden="true" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">
-                  <label for="website">Website</label>
-                  <input id="website" name="website" tabindex="-1" autocomplete="off" />
                 </div>
 
                 <div class="field">
@@ -277,15 +272,15 @@
       <script>
         document.getElementById('year').textContent = String(new Date().getFullYear());
 
-        // Sends contact submissions to contact@ozehr.com with layered delivery fallback.
+        // Contact form delivery: Resend endpoint first, then direct backup POST.
         (function () {
           var CONTACT_API_URL = 'https://api.ozehr.com/api/contact';
-          var BACKUP_FORMSUBMIT_URL = 'https://formsubmit.co/ajax/contact@ozehr.com';
           var form = document.getElementById('contactForm');
           if (!form) return;
           var submitButton = form.querySelector('button[type="submit"]');
           var status = document.getElementById('contactFormStatus');
           var defaultButtonLabel = submitButton ? submitButton.textContent : '';
+          var submittedByBackup = false;
 
           function setStatus(message, isError) {
             if (!status) return;
@@ -312,6 +307,7 @@
             form.setAttribute('action', 'https://formsubmit.co/contact@ozehr.com');
             form.setAttribute('method', 'POST');
             form.setAttribute('target', '_self');
+            submittedByBackup = true;
             form.submit();
           }
 
@@ -342,7 +338,7 @@
             var email = (document.getElementById('email').value || '').trim();
             var topic = (document.getElementById('topic').value || '').trim();
             var message = (document.getElementById('message').value || '').trim();
-            var honeypot = (document.getElementById('website').value || '').trim();
+            submittedByBackup = false;
 
             var subject = 'OzEHR: ' + (topic || 'Contact');
             var body =
@@ -363,7 +359,6 @@
                 email: email,
                 topic: topic,
                 message: message,
-                honeypot: honeypot,
                 page: window.location.href
               });
 
@@ -373,32 +368,16 @@
                 return;
               }
 
-              setStatus('Primary delivery unavailable. Retrying via backup channel...', false);
-
-              var backup = await postJson(BACKUP_FORMSUBMIT_URL, {
-                name: name,
-                email: email,
-                topic: topic,
-                message: message,
-                _subject: subject,
-                _template: 'table',
-                _captcha: 'false'
-              });
-
-              if (backup.ok && backup.result.success !== 'false') {
-                form.reset();
-                setStatus('Message sent. We will follow up at ' + email + '.', false);
-                return;
-              }
-
-              throw new Error('all_delivery_paths_failed');
+              setStatus('Primary delivery unavailable. Sending via backup channel...', false);
+              submitBackupForm(subject);
+              return;
             } catch (err) {
               try {
-                setStatus('Automatic API delivery failed. Sending via backup form...', false);
+                setStatus('Sending via backup channel...', false);
                 submitBackupForm(subject);
                 return;
               } catch (backupErr) {
-                setStatus('Automatic send failed. Opening your email app as fallback.', true);
+                setStatus('Automatic send failed. Opening email app...', true);
 
                 var href =
                   'mailto:contact@ozehr.com' +
@@ -408,7 +387,7 @@
                 window.location.href = href;
               }
             } finally {
-              if (submitButton) {
+              if (!submittedByBackup && submitButton) {
                 submitButton.disabled = false;
                 submitButton.textContent = defaultButtonLabel || 'Send message';
               }
